Second Push to github, 2 new html files added and itirations made to existing one

--- a/recipes/arepas.html
+++ b/recipes/arepas.html
@@ -8,18 +8,18 @@
     <body>
         <h1>Arepas</h1>
         <img src="../recipes/arepa.jpeg" id="arepas">
-        <h2>The Original Arepa</h2>
+        <h2 class="recipe title">The Original Arepa</h2>
         <p>The Arepa is a traditional venezuelan dish made with corn flour and water,
             usually made for breakfast but it can be eaten at anytime of day and for any meal.
         </p>
         <p>It's a very simple recipe, you only need 3 ingredients, 30mins of your time and one pan</p>
-        <h3>Ingredients</h3>
+        <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li>Corn Flour</li>
             <li>Water</li>
             <li>Oil (for cooking)</li>
         </ul>
-        <h4>How To Make An Arepa</h4>
+        <h4 class="instructions">How To Make An Arepa</h4>
         <ol>
             <li>Dissolve salt into the water and slowly add the masarepa until a loose dough forms, 
                 stirring with a spoon or your hands.</li>
