--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="recipes/arepas.html">Arepas</a></li>
+    <li><a href="recipes/pabellon.html">Pabellon</a></li>
+    <li><a href="recipes/cachapa.html">Cachapa</a> </li>
     </ul>
     </body>
 </html>
