css file added with rules to practice new css knowledge

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
     </head>
     <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <ul>
-    <li><a href="recipes/arepas.html">Arepas</a></li>
-    <li><a href="recipes/pabellon.html">Pabellon</a></li>
-    <li><a href="recipes/cachapa.html">Cachapa</a> </li>
+    <li><a href="recipes/arepas.html" class="list">Arepas</a></li>
+    <li><a href="recipes/pabellon.html" class="list">Pabellon</a></li>
+    <li><a href="recipes/cachapa.html" class="list">Cachapa</a> </li>
     </ul>
     </body>
 </html>
