--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
     <h1 class="title">Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/arepas.html" class="list">Arepas</a></li>
-    <li><a href="recipes/pabellon.html" class="list">Pabellon</a></li>
-    <li><a href="recipes/cachapa.html" class="list">Cachapa</a> </li>
-    </ul>
+     <div class="container">
+      <div><a href="recipes/arepas.html" class="list">Arepas</a></div>
+      <div><a href="recipes/pabellon.html" class="list">Pabellon</a></div>
+      <div><a href="recipes/cachapa.html" class="list">Cachapa</a> </div>
+     </div>
     </body>
 </html>  
